# mdstyledocx

./: LICENSE  README.md  pyproject.toml
examples/: gov_notice.md
src/mdstyledocx/: __init__.py  __main__.py  cli.py  docx_writer.py  markdown.py  model.py  presets.py
src/mdstyledocx/preset_specs/: default.json  default.md  gov-cn-hei.json  gov-cn-hei.md  gov-cn.json  gov-cn.md
tests/: __init__.py  test_mdstyledocx.py
