[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mdstyledocx"
version = "0.1.0"
description = "Convert convention-based Markdown into standardized DOCX with reusable style presets."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "YANG Zijie" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-docx>=1.2.0",
]

[project.scripts]
mdstyledocx = "mdstyledocx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mdstyledocx = ["preset_specs/*.json", "preset_specs/*.md"]
